<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/preference_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="20"
        app:showAsAction="ifRoom"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_settings2"
        android:orderInCategory="30"
        android:title="@string/hello_world"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/subMenu_2"
                android:orderInCategory="50"
                app:showAsAction="never"
                android:title="@string/sub2"/>
            <item
                android:id="@+id/subMenu_3"
                android:orderInCategory="60"
                app:showAsAction="never"
                android:title="@string/sub3"/>
        </menu>
    </item>
    <item
        android:id="@+id/item1"
        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
        android:title="@string/share"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/item2"
        android:icon="@android:drawable/alert_dark_frame"
        android:title="write"
        app:showAsAction="always"/>

</menu>